centjes-gen/test_resources/balance/error/as-is/BE_OFF_BALANCE-two.cent
currency USD 0.01

2023-11-24
  * assets +1 USD

2023-11-24
  * income -1 USD
